<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textServerState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_server_state" />

    <TextView
        android:id="@+id/textIptablesState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textServerState"
        android:layout_alignRight="@+id/textServerState"
        android:layout_below="@+id/textServerState"
        android:text="@string/text_iptables_state" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textIptablesState"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonToggleService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_start_text" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/button_open" />

        <Button
            android:id="@+id/buttonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_change_password" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonReinit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_reinit" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonCustomSSID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_custom_ssid" />

        <Button
            android:id="@+id/buttonAcquireRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_acquire_root"
            android:visibility="visible" 
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>