<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutWifiHotspotNotStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_wifi_ap_not_start"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/layoutHotspotButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonGotoWifiSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_go_to_wifi_setting" />

            <Button
                android:id="@+id/buttonContinueWithoutWifiHotspot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_continue_without_hotspot" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCreateWifiAp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textServerFragmentInformationIptables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_waiting_ap"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutWifiDisconnectNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewWifiInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning_wifi_disconnect"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/checkBoxWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_dont_show_again" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSelectInterface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.89"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listViewNameAndIp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05" >
        </ListView>

        <CheckBox
            android:id="@+id/checkBoxRememberMyChoice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"
            android:text="@string/text_remember_my_choice" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutOkCancelButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:text="@android:string/ok" />
    </LinearLayout>

</LinearLayout>